# study-superconducting-quantum-computer

./: .gitignore  .gitmodules  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yml
docs/: index.md
docs/basic/: bloch.md  index.md
docs/calibration/: index.md  qdash.md  qubex.md  rabi.md  readout.md  single_qubit_gates.md  two_qubit_gates.md
docs/javascripts/: bloch.js  mathjax.js  qec_visualizer.js
docs/qec/: index.md  stabilizer_demo.md
docs/quantum/: bloch.md  principle.md  rabi.md
docs/software/: scqubits.md  sqcircuit.md
docs/stylesheets/: extra.css  qec.css
docs/superconducting/: index.md  principle.md
tools/qec_sim/: Cargo.toml
tools/qec_sim/src/: codes.rs  error.rs  lib.rs  pauli.rs  stabilizer.rs
